<resources>
    <string name="app_name">ACT2</string>
    <string name="Name">John Louie Ubias | 3BSIT-2</string>
    <string name="Title">Text View, Edit Text, And Button</string>
    <string name="LastName">Last Name:</string>
    <string name="FirstName">First Name:</string>
    <string name="MI">Middle Initial</string>
    <string name="Send">SEND</string>
    <string name="RedColor">RED</string>
    <string name="GreenColor">GREEN</string>
    <string name="OrangeColor">ORANGE</string>
    <string name="Size34">Size 34</string>
    <string name="Size24">Size 24</string>
    <string name="Size20">Size 20</string>
    <string name="Welcome">Welcome</string>
    <string name="Congratulations">Congratulations</string>
    <string name="HaveANiceDay">Have A Nice Day</string>

</resources>